bindings/c/whiteout_m2.h

typedef struct whiteout_M2LodProfile whiteout_M2LodProfile;
/* ── M2LodProfile ─────────────────────────────────────────────── */

whiteout_M2LodProfile* whiteout_m2_M2LodProfile_new(void);
void whiteout_m2_M2LodProfile_delete(whiteout_M2LodProfile* self);
uint16_t whiteout_m2_M2LodProfile_get_flags(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_flags(whiteout_M2LodProfile* self, uint16_t value);
uint16_t whiteout_m2_M2LodProfile_get_numLodLevels(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_numLodLevels(whiteout_M2LodProfile* self, uint16_t value);
float whiteout_m2_M2LodProfile_get_lodDistance(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_lodDistance(whiteout_M2LodProfile* self, float value);
/* Per-LOD particle bone mask index. Only four are stored, but the client drives up to eight LOD levels: it copies [0..3] into its first four slots and then replicates entry [3] into slots 4..7. */
size_t whiteout_m2_M2LodProfile_particleBoneLod_size(void);
uint8_t whiteout_m2_M2LodProfile_get_particleBoneLod_at(const whiteout_M2LodProfile* self, size_t index);
void whiteout_m2_M2LodProfile_set_particleBoneLod_at(whiteout_M2LodProfile* self, size_t index, uint8_t value);
/* Fixed-point LOD scale, applied as `lodScaleRaw / 2048.0` and only when `flags & 0x08` is set (otherwise the client uses 1.0). This is the pair of bytes previously read as `reserved0` + `lodFlags`; reading it as a u16 explains why the high byte looked like a mirror of flags bit 3, since 0x0800 / 2048 == 1.0. */
uint16_t whiteout_m2_M2LodProfile_get_lodScaleRaw(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_lodScaleRaw(whiteout_M2LodProfile* self, uint16_t value);
uint8_t whiteout_m2_M2LodProfile_get_lodBatchCount(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_lodBatchCount(whiteout_M2LodProfile* self, uint8_t value);
uint8_t whiteout_m2_M2LodProfile_get_reserved1(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_reserved1(whiteout_M2LodProfile* self, uint8_t value);