bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2LodProfile --
    public static final MethodHandle whiteout_m2_M2LodProfile_new = find(
        "whiteout_m2_M2LodProfile_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_delete = find(
        "whiteout_m2_M2LodProfile_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_flags = find("whiteout_m2_M2LodProfile_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_flags = find("whiteout_m2_M2LodProfile_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_numLodLevels = find("whiteout_m2_M2LodProfile_get_numLodLevels", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_numLodLevels = find("whiteout_m2_M2LodProfile_set_numLodLevels", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_lodDistance = find("whiteout_m2_M2LodProfile_get_lodDistance", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_lodDistance = find("whiteout_m2_M2LodProfile_set_lodDistance", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2LodProfile_particleBoneLod_size = find("whiteout_m2_M2LodProfile_particleBoneLod_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_particleBoneLod_at = find("whiteout_m2_M2LodProfile_get_particleBoneLod_at", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_particleBoneLod_at = find("whiteout_m2_M2LodProfile_set_particleBoneLod_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_lodScaleRaw = find("whiteout_m2_M2LodProfile_get_lodScaleRaw", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_lodScaleRaw = find("whiteout_m2_M2LodProfile_set_lodScaleRaw", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_lodBatchCount = find("whiteout_m2_M2LodProfile_get_lodBatchCount", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_lodBatchCount = find("whiteout_m2_M2LodProfile_set_lodBatchCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2LodProfile_get_reserved1 = find("whiteout_m2_M2LodProfile_get_reserved1", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2LodProfile_set_reserved1 = find("whiteout_m2_M2LodProfile_set_reserved1", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
